...

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="45dp"
            android:layout_height="45dp"
...

        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
        <!-- Expression/Input text (1st line) - where user enters digits and functions -->
        <EditText
            android:id="@+id/expression_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        <!-- Solution text (2nd line) - shows live calculation results -->
        <TextView
            android:id="@+id/solution_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sqrt"
                android:layout_width="@dimen/special_button_size"
                android:layout_height="30dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_power"
                android:layout_width="@dimen/special_button_size"
                android:layout_height="@dimen/special_button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pi"
                android:layout_width="@dimen/special_button_size"
                android:layout_height="@dimen/special_button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_factorial"
                android:layout_width="@dimen/special_button_size"
                android:layout_height="@dimen/special_button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_e"
                android:layout_width="@dimen/special_button_size"
                android:layout_height="@dimen/special_button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_backspace"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_brackets"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
...
